--- a/LARA-portal/src/App.css
+++ b/LARA-portal/src/App.css
@@ -1,3 +1,17 @@
 body {
     background-color: black;
 }
+
+.conteudo {
+    color: goldenrod;
+    margin-left: 60px;
+}
+
+h2 {
+    font-size: 100px;
+    margin-top: 60px;
+}
+
+p {
+    font-size: 20px;
+}
